--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 POSTGRES_DB_CONN="postgresql://postgres:1234%40%23A@localhost:5432/go-community-platform-db?sslmode=disable"
-CLIENT_URL="localhost:5173"
+CLIENT_URL="http://localhost:5173"
 MAILER_HOST="smtp.gmail.com"
 MAILER_PORT=587
 MAILER_USERNAME="dhruvshetty960@gmail.com"
